my second commit

--- a/index.html
+++ b/index.html
@@ -31,6 +31,93 @@
      </div>
     </header>
     <main>
+       <div class="container">
+        <h2>Joined Thousand of Products Users</h2>
+      <div class="box-container">
+        <!-- part1 -->
+         <div class="box-item">
+            <h3>50K</h3>
+            <p>Active User</p>
+         </div>
+         <!-- part2 -->
+          <div class="box-item">
+            <h3>2M+</h3>
+            <p>Focus Section</p>
+      </div>
+      <!-- part3 -->
+<div class="box-item">
+            <h3>95%</h3>
+            <p>Satisfaction Rate</p>
+       </div>
+    </div>
+</div>
+
+
+
+<div class="head">
+    <h3>What our users say</h3>
+</div>
+
+
+<div class="card-style">
+  
+    <!-- first card -->
+    <div class="card">
+        <img src="Assets/icon-star.png" alt="">
+        <img src="Assets/icon-star.png" alt="">
+        <img src="Assets/icon-star.png" alt="">
+        <img src="Assets/icon-star.png" alt="">
+        <img src="Assets/icon-star.png" alt="">
+    <h4>Loved by Designers</h4>
+    <p>This template instantly leveled up our presence.” – Studio Vertex
+    </p>
+    <div>
+        <img src="Assets/avatar.png" alt="">
+        <div>
+            <strong class="name">Reviewer name</strong><br>
+            <span class="date">Date</span>
+        </div>
+        </div>
+    </div>
+<!-- second card -->
+    <div class="card">
+        <img src="Assets/icon-star.png" alt="">
+        <img src="Assets/icon-star.png" alt="">
+        <img src="Assets/icon-star.png" alt="">
+        <img src="Assets/icon-star.png" alt="">
+        <img src="Assets/icon-star.png" alt="">
+    <h4>Loved by Designers</h4>
+    <p>This template instantly leveled up our presence.” – Studio Vertex
+    </p>
+    <div>
+        <img src="Assets/avatar.png" alt="">
+        <div>
+            <strong class="name">Reviewer name</strong><br>
+            <span class="date">Date</span>
+        </div>
+        </div>
+    </div>
+    <!-- third card -->
+     
+    <div class="card">
+        <img src="Assets/icon-star.png" alt="">
+        <img src="Assets/icon-star.png" alt="">
+        <img src="Assets/icon-star.png" alt="">
+        <img src="Assets/icon-star.png" alt="">
+        <img src="Assets/icon-star.png" alt="">
+    <h4>Loved by Designers</h4>
+    <p>This template instantly leveled up our presence.” – Studio Vertex
+    </p>
+    <div>
+        <img src="Assets/avatar.png" alt="">
+         </div>
+        <div>
+            <strong class="name">Reviewer name</strong><br>
+            <span class="date">Date</span>
+        </div>
+    </div>
+    </div>
+    </div>
 
     </main>
     <footer>
