my third commit

--- a/index.html
+++ b/index.html
@@ -118,10 +118,57 @@
     </div>
     </div>
     </div>
+<div class="hero">
+   <h2>Ready to focus better</h2>
+   <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+   <button class="btn-primary">Ger Started Free</button>
+   <img  src="Assets/wc-big.png"  alt=""> 
+  </div> 
+</div>
+       </div>
 
-    </main>
-    <footer>
 
-    </footer>
+
+
+       
+<section class="contact-section">
+  <div class="sec-items">
+<div class="sec-text">
+    <h3>Let's Get in <br>Touch</h3>
+</div>
+
+<!-- <div class="sec-form"> -->
+    <form class="contact-form">
+
+        <label>Email</label>
+        <input type="email"placeholder="fkjhfk@email.com"> 
+
+        <label>Name</label>
+        <input type="text" placeholder="full name">
+
+        <label>massage</label>
+        <textarea placeholder="message"></textarea>
+
+        <button class="btn-primary">Get in Touch</button>
+    </form>
+<!-- </div> -->
+</div>
+  </section>
+      <footer> 
+<div class="fotter-section">
+    <h3>LOGO</h3>
+</div>
+<div class="fotter-sub-title">
+    <p>Ready to elevate your online presence?contact us today to discuss <br>your project and discover how we can bring your vision to life</p>
+<ul>
+    <li><a href="">Home</a></li>
+    <li><a href="">About</a></li>
+    <li><a href="">How it Work</a></li>
+    <li><a href="">Services</a></li>
+</ul>
+</div>
+
+
+</footer> 
 </body>
 </html>
