--- a/index.html
+++ b/index.html
@@ -118,14 +118,14 @@
     </div>
     </div>
     </div>
+
+
 <div class="hero">
    <h2>Ready to focus better</h2>
    <p>This template instantly leveled up our presence.” – Studio Vertex</p>
    <button class="btn-primary">Ger Started Free</button>
-   <img  src="Assets/wc-big.png"  alt=""> 
+   <img class="picture" src="Assets/wc-big.png"  alt=""> 
   </div> 
-</div>
-       </div>
 
 
 
